# yastk

./: CMakeLists.txt  LICENSE.md  README.md  _internal_mstack.c  _internal_mstack.h  _internal_yastack.c  _internal_yastack.h  _internal_yastk.c  _internal_yastk.h  mstack.c  mstack.h  yastack.c  yastack.h  yastk.c  yastk.h  yastk_debug.h
tests/: CMakeLists.txt  test_push_pop.c
